# jarvis

./: README.md  install.sh  pyproject.toml
jarvis/: __main__.py  actions.py  config.py  detection.py
